tests/repl/i2063.check
scala> 	class Foo extends Bar // with one tab
-- [E006] Unbound Identifier Error: <console>:4:18 -----------------------------
4 |	class Foo extends Bar // with one tab
  |	                  ^^^
  |	                  not found: type Bar

longer explanation available when compiling with `-explain`
scala>                                                                               class Foo extends Bar // with spaces
-- [E006] Unbound Identifier Error: <console>:4:96 -----------------------------
4 |                                                                              class Foo extends Bar // with spaces
  |                                                                                                ^^^
  |                                                       not found: type Bar

longer explanation available when compiling with `-explain`
scala>                                                                                  class Foo extends Bar // with tabs
-- [E006] Unbound Identifier Error: <console>:4:99 -----------------------------
4 |                                                                                 class Foo extends Bar // with tabs
  |                                                                                                   ^^^
  |                                                       not found: type Bar

longer explanation available when compiling with `-explain`
scala> :quit
